--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ a:hover{
 
 header{
   height: 53px;
+  background: #fafafa;
   border-bottom: 1px solid #cccccc;
 }
 header h1{
@@ -188,6 +189,7 @@ header h1 a{
     -webkit-box-shadow: 0 5px 15px rgba(0,0,0,0.15);
     -moz-box-shadow: 0 5px 15px rgba(0,0,0,0.15);
     box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+    z-index: 10;
   }
   .offer_text p{
     margin-bottom: 10px;
