--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -7,6 +7,10 @@
 	height: 402px;
 	margin-bottom: 31px;
 }
+#slider_4{
+	width: 100%;
+	height: 300px;
+}
 .flexslider.ind1{
 	margin-bottom: 17px;
 }
@@ -19,6 +23,9 @@
 	bottom: -24px;
 	background: url(../images/slider_shadow.png) no-repeat;
 	content: "";
+}
+#slider_4.flexslider:after{
+	display: none;
 }
 .flex-viewport {}
 .loading .flex-viewport {max-height: 300px;}
@@ -39,9 +46,13 @@
 .flex-control-paging li a {width: 12px; height: 12px; display: block; background: url('../images/pags.png') 0 2px no-repeat;cursor: pointer; text-indent: -9999px;}
 .flex-control-paging li a:hover,
 .flex-control-paging li a.flex-active{ background-position:0 -15px;}
-
+#slider_4 .flex-control-paging{display: none;}
 .flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
 .flex-control-thumbs li {width: 25%; float: left; margin: 0;}
 .flex-control-thumbs img {width: 100%; display: block; cursor: pointer;}
 .flex-control-thumbs img:hover {opacity: 1;}
 .flex-control-thumbs .active {opacity: 1; cursor: default;}
+
+#slider_4 img{-webkit-border-radius: 200px;
+-moz-border-radius: 200px;
+border-radius: 200px;}
