--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a:hover{
 
 header{
   height: 53px;
-  background: #fafafa;
+  background: rgba(250,250,250,0.5);
   border-bottom: 1px solid #cccccc;
 }
 header h1{
