--- a/css/style.css
+++ b/css/style.css
@@ -513,11 +513,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
       position: absolute;
       top: 50px;
       left: 34px;
-      -webkit-transition: all 4s linear;
-      -moz-transition: all 4s linear;
-      -ms-transition: all 4s linear;
-      -o-transition: all 4s linear;
-      transition: all 4s linear;
+      -webkit-transition: all 3s linear;
+      -moz-transition: all 3s linear;
+      -ms-transition: all 3s linear;
+      -o-transition: all 3s linear;
+      transition: all 3s linear;
       -webkit-transition-delay: 500ms;
       -moz-transition-delay: 500ms;
       -ms-transition-delay: 500ms;
@@ -540,11 +540,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
         -ms-transition: all 200ms linear;
         -o-transition: all 200ms linear;
         transition: all 200ms linear;
-        -webkit-transition-delay: 4.5s;
-        -moz-transition-delay: 4.5s;
-        -ms-transition-delay: 4.5s;
-        -o-transition-delay: 4.5s;
-        transition-delay: 4.5s;
+        -webkit-transition-delay: 3.5s;
+        -moz-transition-delay: 3.5s;
+        -ms-transition-delay: 3.5s;
+        -o-transition-delay: 3.5s;
+        transition-delay: 3.5s;
         content: "";
       }
       .show .timing_stripe:after{
@@ -708,9 +708,21 @@ a:hover{
     transition: all 0.3s ease;
 }
 
+@media only screen and (max-width: 1024px){
+  .prize{
+    width: 980px;
+    -webkit-background-size: contain;
+    background-size: contain;
+    left: 0px;
+  }
+  .gif_wrap{right: -10px;}
+  body{
+    min-width: 1010px;
+  }
+}
+
 @media only screen and (min-width: 1024px) {
  /*=========================> Animations <======================*/
-
   .obj1{
     -moz-transform: translateY(-30px);
     -webkit-transform: translateY(-30px);
