--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -3,9 +3,10 @@
 *********************************/
 .flexslider {
 	position: relative;
+	z-index: 5;	
 	width: 619px;
 	height: 402px;
-	margin-bottom: 31px;
+	margin-bottom: 23px;
 }
 #slider_4{
 	width: 100%;
