--- a/css/style.css
+++ b/css/style.css
@@ -98,12 +98,92 @@ a:hover{
   text-decoration: none;
 }
 
+.button{
+  display: inline-block;
+  border: 1px solid #cca622;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background: #ffc600;
+  background: -moz-linear-gradient(top,  #ffc600 0%, #ffa400 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffc600), color-stop(100%,#ffa400));
+  background: -webkit-linear-gradient(top,  #ffc600 0%,#ffa400 100%);
+  background: -o-linear-gradient(top,  #ffc600 0%,#ffa400 100%);
+  background: -ms-linear-gradient(top,  #ffc600 0%,#ffa400 100%);
+  background: linear-gradient(to bottom,  #ffc600 0%,#ffa400 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc600', endColorstr='#ffa400',GradientType=0 );
+  -webkit-box-shadow: 0 4px 1px #f9b32d;
+  -moz-box-shadow: 0 4px 1px #f9b32d;
+  box-shadow: 0 4px 1px #f9b32d;
+  font-size: 18px;
+  line-height: 22px;
+  position: relative;
+  padding: 18px 34px 16px 49px;
+  -webkit-transition: none;
+     -moz-transition: none;
+      -ms-transition: none;
+       -o-transition: none;
+          transition: none;
+}
+  .button:before{
+    position: absolute;
+    display: block;
+    width: 18px;
+    height: 18px;
+    left: 19px;
+    top: 20px;
+    background: url(../images/btn_icon.png) no-repeat;
+    content: "";
+  }
+  .button:after{
+    width: 100%;
+    height: 9px;
+    display: block;
+    position: absolute;
+    bottom: -14px;
+    left: 0;
+    background: url(../images/button_after.png) 50% 0 no-repeat;
+    content: "";
+  }
+  .button:hover{
+    background: #ffa400;
+    background: -moz-linear-gradient(top,  #ffa400 0%, #ffc600 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffa400), color-stop(100%,#ffc600));
+    background: -webkit-linear-gradient(top,  #ffa400 0%,#ffc600 100%);
+    background: -o-linear-gradient(top,  #ffa400 0%,#ffc600 100%);
+    background: -ms-linear-gradient(top,  #ffa400 0%,#ffc600 100%);
+background: linear-gradient(to bottom,  #ffa400 0%,#ffc600 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', endColorstr='#ffc600',GradientType=0 );
+  }
+  .button:active{
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-box-shadow: inset 0 4px 1px #e27e14;
+    -moz-box-shadow: inset 0 4px 1px #e27e14;
+    box-shadow: inset 0 4px 1px #e27e14;
+    padding-top: 22px;
+  }
+  .button:active:before{
+    top: 25px;
+  }
+  .button:active:after{
+    display: none;
+  }
+
 /*======================> Header <======================*/
 
 header{
   height: 53px;
-  background: rgba(250,250,250,0.5);
-  border-bottom: 1px solid #cccccc;
+  background: #e8ca7e;
+  background: -moz-linear-gradient(top,  #e8ca7e 0%, #edd27e 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8ca7e), color-stop(100%,#edd27e));
+  background: -webkit-linear-gradient(top,  #e8ca7e 0%,#edd27e 100%);
+  background: -o-linear-gradient(top,  #e8ca7e 0%,#edd27e 100%);
+  background: -ms-linear-gradient(top,  #e8ca7e 0%,#edd27e 100%);
+  background: linear-gradient(to bottom,  #e8ca7e 0%,#edd27e 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8ca7e', endColorstr='#edd27e',GradientType=0 );
+  border-bottom: 1px solid #d5bb66;
 }
 header h1{
   padding: 13px 0 0 10px;
@@ -131,8 +211,8 @@ header h1 a{
     z-index: 2;
   }
   .yellow_box_slider .object2{
-    top: -1px;
-    left: 362px;
+    top: 15px;
+    left: 389px;
     z-index: 2;
   }
   .gif_wrap{
@@ -141,7 +221,7 @@ header h1 a{
     right: -16px;
     bottom: 0;
     z-index: 0;
-    background: url(../images/yellow_object3.png) no-repeat;
+    background: url(../images/yellow_object3.png) 9px 16px no-repeat;
   }
   .gif_wrap_inner{
     padding: 26px 207px 0 23px;
@@ -232,22 +312,22 @@ header h1 a{
   }
 
   .prestigio_link{
-    width: 160px;
+    width: 200px;
     height: 60px;
-    right: 20px;
-    top: 170px;
+    right: 0px;
+    top: 200px;
   }
   .philips_link{
-    width: 160px;
+    width: 180px;
     height: 60px;
-    right: 20px;
-    top: 250px;
-  }
-  .asus_link{
-    width: 160px;
-    height: 60px;
-    right: 20px;
+    right: 0px;
     top: 340px;
+  }
+  .acer_link{
+    width: 200px;
+    height: 73px;
+    right: 0px;
+    top: 273px;
   }
 
 /*=====================>Timer box <===================== */
@@ -297,14 +377,23 @@ header h1 a{
   
 /*=====================> Device Description <========================*/
 .device_description{
-  padding-bottom: 148px;
+  padding-bottom: 48px;
   position: relative;
   z-index: 20;
-  background-color: #fafafa;
+  background-color: #eeeeee;
 }
+  .device_description_inner{
+    padding: 15px 0 0 20px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .device_description_inner p{
+    margin-bottom: 43px;
+  }
+
   .device_row{
-    border-top: 1px solid #ebebeb;
-    padding: 68px 0 39px;
+    border-top: 1px solid #cccccc;
+    padding: 68px 0;
   }
   .device_description .device_row:first-child .flexslider{
     margin-top: -49px;
@@ -314,20 +403,36 @@ header h1 a{
   }
   .device_description .device_row:first-child{
     border: none;
-    padding: 0 0 38px;
+    padding: 0 0 65px;
   }
-  .device_description .device_row:first-child .title2{
+  /*.device_description .device_row:first-child .title2{
     padding-top: 14px;
+  }*/
+  .device_description .device_row:first-child .dev_col1{
+    padding-top: 22px;
   }
   .device_description .device_row:first-child+.device_row .dev_col1{
     float: right;
     padding: 0 0 0 20px;
     width: 300px;
   } 
+  .device_description .device_row:first-child+.device_row .dev_list:after{
+    width: 25px;
+    height: 292px;
+    position: absolute;
+    left: -25px;
+    right: auto;
+    top: 0;
+    background: url(../images/des_list_arrow1.png) no-repeat;
+    display: block;
+    content: "";
+  }
 
   .dev_col1{
-    width: 300px;
-    padding-right: 20px;
+    width: 320px;
+    padding: 0px 12px 0 0;
+    position: relative; 
+    z-index: 10;
   }
   .dev_col2{
     width: 620px;
@@ -347,17 +452,36 @@ header h1 a{
   .dev_list{
     font-size: 14px;
     line-height: 24px;
+    background: #fff;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    margin: 0 0px 0 -10px;
+    padding: 10px 10px 5px 20px;
+    position: relative;
+    z-index: 10;
+  }
+  .dev_list:after{
+    width: 25px;
+    height: 292px;
+    position: absolute;
+    right: -25px;
+    top: 0;
+    background: url(../images/des_list_arrow.png) no-repeat;
+    display: block;
+    z-index:  99;
+    content: "";
   }
   .dev_list dt{
     font-size: 18px;
-    margin-bottom: 11px;
+    margin-bottom: 7px;
   }
   .dev_list.marker dt{
     background: url(../images/marker.png) 0 10px no-repeat;
     padding: 0 0 0 12px;
   }
   .dev_list dd{
-    margin-bottom: 9px;
+    margin-bottom: 17px;
   }
 
   .sm_col1{
@@ -442,7 +566,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc600', end
     background: -ms-linear-gradient(top,  #ffa400 0%,#ffc600 100%);
     background: linear-gradient(to bottom,  #ffa400 0%,#ffc600 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', endColorstr='#ffc600',GradientType=0 );
-
+  }
+  .big_btn:active{
+    -webkit-box-shadow: inset 0 4px 1px #e27e14;
+    -moz-box-shadow: inset 0 4px 1px #e27e14;
+    box-shadow: inset 0 4px 1px #e27e14;
+    padding-top: 31px;
+    margin-bottom: -4px;
   }
   .big_btn_wrap{
     position: absolute;
@@ -474,12 +604,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
   padding: 100px 0 30px;
 }
   .rules_list{
-    padding: 8px 0 0 71px;
+    padding: 8px 0 0 0px;
   }
   .rules_list dt{
     font-size: 30px;
     line-height: 30px;
     margin-bottom: 18px;
+    padding-left: 71px;
   }
   .rules_list dt .sub_title{
     font-size: 24px;
@@ -487,8 +618,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
     margin-top: -4px;
   }
   .rules_list dd{
-    margin-bottom: 45px;
+    margin-bottom: 21px;
   }
+  .rules_list1{
+    padding: 0 20px 0 35px;
+  }
+    .rules1_item{
+      background: url(../images/rules_icon.png) 2px 8px no-repeat;
+      padding-left: 56px;
+      margin-top: 10px;
+    }
+    .rules_list1 .rules1_item:first-child{
+      margin-top: 0;
+    }
   .rule_icon{
     position: relative;
   }
@@ -497,7 +639,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
       width: 46px;
       height: 71px;
       position: absolute;
-      left: -59px;
+      left: 12px;
       top: -5px;
       content: "";
     }
@@ -568,10 +710,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
   background: url(../images/brands_bg.jpg) 50% 0 no-repeat;
 }
   .brand_cols{
-    margin-bottom: 223px;
+    margin-bottom: 193px;
   }
     .brand_cols article:first-child+article{
-      min-height: 630px;
+      min-height: 660px;
     }
   .brand_col{
     width: 319px;
@@ -608,13 +750,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
       background: #0265cb;
     }
   .brand_col3{
-    background: #75d012;
+    background: #92bd3d;
   }
     .brand_col3:after{
       background: url(../images/brand_col_bottom3.png) no-repeat;
     }
     .brand_col3 .logo_box{
-      background: #6bcc00;
+      background: #84b818;
     }
 
   .logo_box{
@@ -626,7 +768,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa400', end
       vertical-align: middle;
     }
   .brand_content{
-    padding: 15px 25px 15px 20px;
+    padding: 23px 25px 15px 20px;
     font-size: 16px;
     line-height: 24px;
     color: #fff;
@@ -676,10 +818,17 @@ h2,h3,h4{
 }
 
 .title2{
-  font-size: 22px;
-  line-height: 24px;
+  font-size: 36px;
+  line-height: 42px;
   color:#333333;
-  margin-bottom: 36px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+.title3{
+  font-size: 22px;
+  line-height: 26px;
+  color: #333333;
+  margin-bottom: 34px;
 }
 
 .t_ind{ margin-bottom:12px;}
@@ -707,16 +856,16 @@ h2,h3,h4{
 
 /*================================>> hovers <<========================================*/
 a{
-    -webkit-transition: all 0.7s ease;
+    /*-webkit-transition: all 0.7s ease;
     -moz-transition: all 0.7s ease;
     -o-transition: all 0.7s ease;
-    transition: all 0.7s ease;
+    transition: all 0.7s ease;*/
 }
 a:hover{
-    -webkit-transition: all 0.3s ease;
+    /*-webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease;*/
 }
 
 @media only screen and (max-width: 1024px){
